results/SpecGenBench/conversational/log-JewelsInStones-2023_06_27_16_03_40.txt
class JewelsInStones {
    //@ requires jewels != null && stones != null;
    //@ ensures \result >= 0 && \result <= stones.length();
    public int numJewelsInStones(String jewels, String stones) {
        int jewelsCount = 0;
        int jewelsLength = jewels.length(), stonesLength = stones.length();
        //@ maintaining 0 <= i && i <= stonesLength;
        //@ maintaining 0 <= j && j <= jewelsLength;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int l; 0 <= l && l < jewelsLength; stones.charAt(k) != jewels.charAt(l))) ==> jewelsCount == \old(jewelsCount);
        //@ decreases stonesLength - i;
        for (int i = 0; i < stonesLength; i++) {
            char stone = stones.charAt(i);
            //@ maintaining 0 <= j && j <= jewelsLength;
            //@ maintaining (\forall int k; 0 <= k && k < j; stones.charAt(i) != jewels.charAt(k)) ==> jewelsCount == \old(jewelsCount);
            //@ decreases jewelsLength - j;
            for (int j = 0; j < jewelsLength; j++) {
                char jewel = jewels.charAt(j);
                if (stone == jewel) {
                    jewelsCount++;
                    break;
                }
            }
        }
        return jewelsCount;
    }
}
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:8: error: cannot find symbol
        //@ maintaining 0 <= j && j <= jewelsLength;
                             ^
  symbol:   variable j
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:8: error: cannot find symbol
        //@ maintaining 0 <= j && j <= jewelsLength;
                                  ^
  symbol:   variable j
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:9: error: cannot find symbol
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int l; 0 <= l && l < jewelsLength; stones.charAt(k) != jewels.charAt(l))) ==> jewelsCount == \old(jewelsCount);
                                                                                                                                                                    ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:14: error: cannot find symbol
            //@ maintaining (\forall int k; 0 <= k && k < j; stones.charAt(i) != jewels.charAt(k)) ==> jewelsCount == \old(jewelsCount);
                                                                                                                           ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
4 errors

class JewelsInStones {
    //@ requires jewels != null && stones != null;
    //@ ensures \result >= 0 && \result <= stones.length();
    public int numJewelsInStones(String jewels, String stones) {
        int jewelsCount = 0;
        int jewelsLength = jewels.length(), stonesLength = stones.length();
        //@ maintaining 0 <= i && i <= stonesLength;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int l; 0 <= l && l < jewelsLength; stones.charAt(k) != jewels.charAt(l))) ==> jewelsCount == \old(jewelsCount);
        //@ decreases stonesLength - i;
        for (int i = 0; i < stonesLength; i++) {
            char stone = stones.charAt(i);
            //@ maintaining 0 <= j && j <= jewelsLength;
            //@ maintaining (\forall int k; 0 <= k && k < j; stones.charAt(i) != jewels.charAt(k)) ==> jewelsCount == \old(jewelsCount);
            //@ decreases jewelsLength - j;
            for (int j = 0; j < jewelsLength; j++) {
                char jewel = jewels.charAt(j);
                if (stone == jewel) {
                    jewelsCount++;
                    break;
                }
            }
        }
        return jewelsCount;
    }
}
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:8: error: cannot find symbol
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int l; 0 <= l && l < jewelsLength; stones.charAt(k) != jewels.charAt(l))) ==> jewelsCount == \old(jewelsCount);
                                                                                                                                                                    ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:13: error: cannot find symbol
            //@ maintaining (\forall int k; 0 <= k && k < j; stones.charAt(i) != jewels.charAt(k)) ==> jewelsCount == \old(jewelsCount);
                                                                                                                           ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
2 errors

class JewelsInStones {
    //@ requires jewels != null && stones != null;
    //@ ensures \result >= 0 && \result <= stones.length();
    public int numJewelsInStones(String jewels, String stones) {
        int jewelsCount = 0;
        int jewelsLength = jewels.length(), stonesLength = stones.length();
        //@ maintaining 0 <= i && i <= stonesLength;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int l; 0 <= l && l < jewelsLength; stones.charAt(k) != jewels.charAt(l))) ==> jewelsCount == \old(jewelsCount);
        //@ decreases stonesLength - i;
        for (int i = 0; i < stonesLength; i++) {
            char stone = stones.charAt(i);
            //@ maintaining 0 <= j && j <= jewelsLength;
            //@ maintaining (\forall int k; 0 <= k && k < j; stones.charAt(i) != jewels.charAt(k)) ==> jewelsCount == \old(jewelsCount);
            //@ decreases jewelsLength - j;
            for (int j = 0; j < jewelsLength; j++) {
                char jewel = jewels.charAt(j);
                if (stone == jewel) {
                    jewelsCount++;
                    break;
                }
            }
        }
        return jewelsCount;
    }
}
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:8: error: cannot find symbol
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int l; 0 <= l && l < jewelsLength; stones.charAt(k) != jewels.charAt(l))) ==> jewelsCount == \old(jewelsCount);
                                                                                                                                                                    ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:13: error: cannot find symbol
            //@ maintaining (\forall int k; 0 <= k && k < j; stones.charAt(i) != jewels.charAt(k)) ==> jewelsCount == \old(jewelsCount);
                                                                                                                           ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
2 errors

class JewelsInStones {
    //@ requires jewels != null && stones != null;
    //@ ensures \result >= 0 && \result <= stones.length();
    public int numJewelsInStones(String jewels, String stones) {
        int jewelsCount = 0;
        int jewelsLength = jewels.length(), stonesLength = stones.length();
        //@ maintaining 0 <= i && i <= stonesLength;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int l; 0 <= l && l < jewelsLength; stones.charAt(k) != jewels.charAt(l))) ==> jewelsCount == \old(jewelsCount);
        //@ decreases stonesLength - i;
        for (int i = 0; i < stonesLength; i++) {
            char stone = stones.charAt(i);
            //@ maintaining 0 <= j && j <= jewelsLength;
            //@ maintaining (\forall int k; 0 <= k && k < j; stones.charAt(i) != jewels.charAt(k)) ==> jewelsCount == \old(jewelsCount);
            //@ decreases jewelsLength - j;
            for (int j = 0; j < jewelsLength; j++) {
                char jewel = jewels.charAt(j);
                if (stone == jewel) {
                    jewelsCount++;
                    break;
                }
            }
        }
        return jewelsCount;
    }
}
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:8: error: cannot find symbol
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int l; 0 <= l && l < jewelsLength; stones.charAt(k) != jewels.charAt(l))) ==> jewelsCount == \old(jewelsCount);
                                                                                                                                                                    ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:13: error: cannot find symbol
            //@ maintaining (\forall int k; 0 <= k && k < j; stones.charAt(i) != jewels.charAt(k)) ==> jewelsCount == \old(jewelsCount);
                                                                                                                           ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
2 errors

